--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -6,27 +6,21 @@
     background-repeat: no-repeat;
     background-position: center center;
     .contact_container {
-        padding: 40px 0;
+        margin: 0 auto;
+        width: 80%;
+        height: 100%;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-        flex-direction: row;
-        margin: 0 auto;
-        width: 80%;
-        color: #ffffff;
-    }
-    .contact_company {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex; // width: 70%;
+        color: #fff;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        padding: 40px 0px;
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center;
-        width: 80%;
-        .contact_company-about {
+        &--about {
+            width: 33%;
             i {
                 color: #3b6448;
             }
@@ -34,45 +28,48 @@
                 width: 70%;
             }
         }
-        .contact_company-contact {
-            margin: 0 40px;
+        &--contact {
+            width: 30%;
             p {
                 margin-bottom: 10px;
             }
         }
-    }
-    .contact_form {
-        padding: 20px;
-        input[type='text'] {
-            height: 35px;
-            background-color: #e5e5e5;
-        }
-        textarea,
-        input[type='text'] {
-            border: 0;
-            background-color: #e5e5e5;
-            width: 100%;
-            margin-bottom: 10px;
-            outline: none !important;
-        }
-        input[type="button"] {
-            background-color: #54555a;
-            width: 100%;
-            padding: 10px 0;
-            margin-top: 10px;
-            border: 0;
-            color: #fefefe;
-            font-family: Lato;
-            font-size: 16px;
-            font-weight: 700;
-            line-height: 22px;
-            text-transform: uppercase;
-            outline: none !important;
-            &:hover {
-                background-color: #3e3e41;
+        &--form {
+            width: 30%;
+            padding: 20px;
+            input[type='text'] {
+                height: 35px;
+                background-color: #e5e5e5;
             }
-            &:active {
-                background: #6b8b75;
+            textarea,
+            input[type='text'] {
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                width: 100%;
+                border: 0;
+                background-color: #e5e5e5;
+                width: 100%;
+                margin-bottom: 10px;
+                padding: 10px 20px;
+            }
+            input[type="button"] {
+                background-color: #54555a;
+                width: 100%;
+                padding: 10px 0;
+                margin-top: 10px;
+                border: 0;
+                color: #fefefe;
+                font-family: Lato;
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 22px;
+                text-transform: uppercase;
+                &:hover {
+                    background-color: #3e3e41;
+                }
+                &:active {
+                    background: #6b8b75;
+                }
             }
         }
         .contact_form-veryficate {
@@ -81,6 +78,47 @@
             display: flex;
             input[type='text']:first-child {
                 margin-right: 10px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1180px) {
+    .contact {
+        .contact_container {
+            width: 90%;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            &--about {
+                width: 100%;
+                text-align: center;
+                img {
+                    margin-top: 40px;
+                }
+                p {
+                    margin-top: 40px;
+                    width: 100%;
+                    text-align: center;
+                }
+            }
+            &--contact {
+                margin-top: 40px;
+                width: 100%;
+                text-align: center;
+            }
+            &--form {
+                width: 100%;
             }
         }
     }
