--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,24 +1,57 @@
-.header {
+.Slider {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.arrowContainer-left,
+.arrowContainer-right {
+    background: #fff;
+    cursor: pointer;
+    position: absolute;
+    top: 30%;
+    display: inline-block;
+}
+
+.slider_arrow-left,
+.slider_arrow-right {
+    color: inherit;
+    font-size: 30px;
+    :hover {
+        color: rgb(53, 53, 53);
+    }
+    @media(max-width: 992px) {
+        font-size: 20px;
+    }
+}
+
+.arrowContainer-left {
+    left: 0;
+    padding: 0px 15px 0px 0px;
+}
+
+.arrowContainer-right {
+    right: 0;
+    padding: 0px 0px 0px 15px;
+}
+
+.Slider_item {
+    width: 100%;
+    height: 100%;
+}
+
+.slide_item {
+    margin-right: auto;
+    margin-left: auto;
+    display: none; // width: 100%;
+    // height: 100%;
+    list-style-type: none;
+    text-align: center;
     img {
-        position: relative;
         width: 100%;
         height: 100%;
-        background-size: cover;
     }
-    .arrow--left,
-    .arrow--right {
-        position: absolute;
-        bottom: 0;
-        font-size: 40px;
-        color: #fff;
-        cursor: pointer;
-    }
-    .arrow--right {
-        right: 0;
-        bottom: 0;
-        margin-right: 50px;
-    }
-    .arrow--left {
-        margin-left: 50px;
+    &--active {
+        display: block;
     }
 }
