--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -82,7 +82,7 @@
         -ms-flex-pack: center;
         justify-content: center;
         margin: 20px;
-        .tablePagination__item {
+        li {
             cursor: pointer;
             margin-right: 20px;
             font-family: Lato;
