--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,6 +1,7 @@
 .tableWrapper {
     width: 80%;
     margin: 0 auto;
+
     .tableWrapper-btnContainer {
         width: 100%;
         display: -webkit-box;
@@ -12,6 +13,7 @@
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         padding: 20px;
+
         select {
             cursor: pointer;
             background-color: #e5e5e5;
@@ -30,6 +32,7 @@
             background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
             background-repeat: no-repeat;
         }
+
         select:focus {
             background-image: linear-gradient(45deg, white 50%, transparent 50%), linear-gradient(135deg, transparent 50%, white 50%), linear-gradient(to right, #00a671, #00a671);
             background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, 100% 0;
@@ -39,17 +42,21 @@
             outline: 0;
         }
     }
+
     table {
         width: 100%;
         border-collapse: collapse;
+
         thead {
             tr {
                 border-top: 1px solid #000;
                 border-bottom: 1px solid #000;
                 padding: 20px 0px;
                 cursor: pointer;
+
                 th {
                     text-align: left;
+
                     .arrow-container {
                         display: -webkit-box;
                         display: -ms-flexbox;
@@ -62,11 +69,13 @@
                 }
             }
         }
+
         tbody {
             tr {
                 &:hover {
                     background: #bbbbbb;
                 }
+
                 td {
                     padding: 10px 10px 10px 0px;
                     text-align: left;
@@ -74,6 +83,7 @@
             }
         }
     }
+
     .tablePagination {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -82,7 +92,8 @@
         -ms-flex-pack: center;
         justify-content: center;
         margin: 20px;
-        li {
+
+        .pagination_button {
             cursor: pointer;
             margin-right: 20px;
             font-family: Lato;
@@ -91,6 +102,8 @@
             padding: 10px;
             background-color: #e5e5e5;
             color: #85878d;
+            border: 0;
+
             &:active {
                 background-color: #00a671;
                 color: #fff;
@@ -103,12 +116,14 @@
 (min-device-width: 768px) and (max-device-width: 1024px) {
     .tableWrapper {
         margin: 0 auto;
+
         .tableWrapper-btnContainer {
             -webkit-box-pack: center;
             -ms-flex-pack: center;
             justify-content: center;
             margin: 0 auto;
         }
+
         table,
         thead,
         tbody,
@@ -118,14 +133,17 @@
             width: 100%;
             display: block;
         }
+
         thead tr {
             position: absolute;
             top: -9999px;
             left: -9999px;
         }
+
         tr {
             border: 1px solid #ccc;
         }
+
         td {
             border: none;
             border-bottom: 1px solid #eee;
@@ -133,6 +151,7 @@
             padding-left: 50%;
             border: 1px solid #ccc;
         }
+
         td:before {
             position: absolute;
             top: 6px;
@@ -141,24 +160,31 @@
             padding-right: 10px;
             white-space: nowrap;
         }
+
         td:nth-of-type(1):before {
             content: "nr budynku mieszkania";
         }
+
         td:nth-of-type(2):before {
             content: "Kondygnacja";
         }
+
         td:nth-of-type(3):before {
             content: "Powierzchnia użytkowa";
         }
+
         td:nth-of-type(4):before {
             content: "powierzchnia ogródka / strychu";
         }
+
         td:nth-of-type(5):before {
             content: "cena brutto";
         }
+
         td:nth-of-type(6):before {
             content: "plan";
         }
+
         td:nth-of-type(7):before {
             content: "status";
         }
@@ -169,6 +195,7 @@
     .tableWrapper {
         padding: 0;
         margin: 0 auto;
+
         .tableWrapper-btnContainer {
             margin: 0;
             padding: 0;
@@ -180,6 +207,7 @@
             -ms-flex-direction: column;
             flex-direction: column;
             width: 100%;
+
             select {
                 border: 1px solid #54555a;
             }
