--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -48,14 +48,33 @@
         border-collapse: collapse;
 
         thead {
+            width: 100%;
+
+
             tr {
                 border-top: 1px solid #000;
                 border-bottom: 1px solid #000;
                 padding: 20px 0px;
                 cursor: pointer;
+                width: 100%;
+
+
 
                 th {
-                    text-align: left;
+                    .cell {
+                        width: 100%;
+                        display: -webkit-box;
+                        display: -ms-flexbox;
+                        display: flex;
+                        -webkit-box-orient: horizontal;
+                        -webkit-box-direction: normal;
+                        -ms-flex-direction: row;
+                        flex-direction: row;
+                        -webkit-box-pack: justify;
+                        -ms-flex-pack: justify;
+                        justify-content: space-evenly;
+                    }
+
 
                     .arrow-container {
                         display: -webkit-box;
