--- a/src/components/flatViews/FlatViews.scss
+++ b/src/components/flatViews/FlatViews.scss
@@ -6,6 +6,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+
     .flatViews-container {
         padding: 50px 0;
         width: 80%;
@@ -21,6 +22,7 @@
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center;
+
         .dataTable {
             margin-top: 40px;
             width: 100%; // max-width: 570px;
@@ -28,23 +30,29 @@
             background-color: #60372f;
             opacity: 0.8;
             border: 1px solid rgb(38, 248, 125);
+
             table {
                 width: 100%;
                 padding: 20px;
+
                 tbody {
                     tr {
+
+                        line-height: 40px;
+
                         td {
                             color: #ffffff;
                             font-family: Lato;
                             font-size: 17px;
                             font-weight: 700;
-                            line-height: 40px;
+
                             &:nth-child(1) {
                                 background-color: #00a671;
                                 border-radius: 50%;
                                 text-align: center;
-                                padding: 5px;
+                                padding: 1px 8px;
                             }
+
                             &:nth-child(2) {
                                 padding-left: 15px;
                             }
@@ -53,11 +61,13 @@
                 }
             }
         }
+
         .project-img {
             width: 100%;
             height: auto;
             padding: 20px;
         }
+
         .btn-changeProject {
             cursor: pointer;
             width: 250px;
@@ -71,10 +81,12 @@
             border: 0;
             outline: 0;
             margin: 10px;
+
             &:hover {
                 background-color: #3a3a3f;
             }
         }
+
         .buttons {
             width: 100%;
             display: -webkit-box;
@@ -85,18 +97,22 @@
             -ms-flex-direction: column;
             flex-direction: column;
         }
+
         .buttons-row {
             display: -webkit-box;
             display: -ms-flexbox;
             display: flex;
         }
+
         .flat-project {
             width: 100%;
         }
+
         .flatViews__left {
             width: 500px;
             margin-right: 4%;
         }
+
         .flatViews__right {
             width: 500px;
             display: -webkit-box;
