--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -6,7 +6,8 @@
 
 .arrowContainer-left,
 .arrowContainer-right {
-    background: #fff;
+    background: rgba(255, 255, 255, 0.767);
+    color: rgba(0, 0, 0, 0.52);
     cursor: pointer;
     position: absolute;
     top: 30%;
@@ -17,9 +18,11 @@
 .slider_arrow-right {
     color: inherit;
     font-size: 30px;
+
     :hover {
-        color: rgb(53, 53, 53);
+        color: rgb(0, 0, 0);
     }
+
     @media(max-width: 992px) {
         font-size: 20px;
     }
@@ -47,10 +50,12 @@
     // height: 100%;
     list-style-type: none;
     text-align: center;
+
     img {
         width: 100%;
         height: 100%;
     }
+
     &--active {
         display: block;
     }
