--- a/src/components/flatViews/FlatViews.scss
+++ b/src/components/flatViews/FlatViews.scss
@@ -127,3 +127,27 @@
         }
     }
 }
+
+@media screen and (max-width: 1000px) {
+    .flatViews {
+
+        .buttons-row {
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            justify-items: center;
+            justify-self: center;
+            margin: 0 auto;
+
+
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;
+
+        }
+    }
+}
