--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -169,6 +169,7 @@
         tr {
             border: 1px solid rgb(12, 12, 12);
             margin-top: 20px;
+            max-width: 100%;
 
         }
 
@@ -177,6 +178,7 @@
             border-bottom: 1px solid rgb(170, 166, 166);
             border: 1px solid #ccc;
 
+            word-wrap: inherit;
         }
 
         td:before {
